--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "react-dom": "^18.2.0",
         "sass": "^1.56.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.14.1"
     }
 }
